# stomp_ros

stomp_core/: CMakeLists.txt  package.xml
stomp_core/examples/: stomp_example.cpp
stomp_core/include/stomp_core/: stomp.h  utils.h
stomp_core/src/: stomp.cpp
stomp_kinematics/: CMakeLists.txt  package.xml
stomp_kinematics/include/stomp_kinematics/: kinematics.h
stomp_kinematics/src/: kinematics.cpp
stomp_kinematics/tests/: kinematics_test.cpp  main.cpp
stomp_moveit/: CMakeLists.txt  package.xml
stomp_moveit/include/stomp_moveit/: stomp_planner.h
stomp_moveit/src/: stomp_planner.cpp
stomp_plugins/: CMakeLists.txt  cost_function_plugins.xml  noise_generator_plugins.xml  package.xml
stomp_plugins/include/stomp_plugins/cost_functions/: cartesian_distance.h  tool_goal_pose.h
stomp_plugins/include/stomp_plugins/noise_generators/: cartesian_constraints_sampling.h  cartesian_normal_distribution_sampling.h  goal_guided_multivariate_gaussian.h
stomp_plugins/include/stomp_plugins/update_filters/: constrained_cartesian_goal.h
stomp_plugins/src/cost_functions/: cartesian_distance.cpp  tool_goal_pose.cpp
stomp_plugins/src/noise_generators/: cartesian_constraints_sampling.cpp  cartesian_normal_distribution_sampling.cpp  goal_guided_multivariate_gaussian.cpp
stomp_plugins/src/update_filters/: constrained_cartesian_goal.cpp
stomp_plugins/tests/: cartesian_constraints_sampling_test.cpp  main.cpp
