<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stomp_kinematics</name>
  <version>0.0.0</version>
  <description>This is experimental package </description>
  <author>Jorge Nicho</author>
  <maintainer email="dobis@photoneo.com">Michal Dobis</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/stomp_moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>eigen</build_export_depend>

  <depend>boost</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>trac_ik_lib</depend>
  <depend>visualization_msgs</depend>

</package>
